--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>Learning Git</h1>
+  <h1>Learning Git {Inside the main branch}</h1>
 
   <h2>Version 2</h2>
   <h2>Version 3</h2>
