just the littliest of appreciation added to index file

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
   <h2>Version 3</h2>
   <h2>Version 4 (added on GitHub)</h2>
   <h2>Version 5</h2>
+
+  
+   <p> On behalf of all the future great Devs of Altschool, I would persoanlly like to let you know we see all the hard work you are pytting into this, we know how annoying some of us can get with the questions and comment we leave you in classes. We very well appreciate your teaching technique especially the level of patience you had to include. We are priviledged to be taught by you.</p>
+  
 </body>
 </html>
